--- a/style/index.css
+++ b/style/index.css
@@ -1,14 +1,62 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+  margin-top: 40px;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  background-color: #565454;
+.calculator-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.container {
+  background-image: url('https://escales.ponant.com/wp-content/uploads/2020/12/plage.jpg');
+  background-size: cover;
+  border-radius: 20px;
+  width: 400px;
+  height: 520px;
+}
+
+input {
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 5px;
+  width: 80px;
+  height: 70px;
+  font-size: 40px;
+background-color: transparent;
+border: 1px solid rgb(10, 10, 10);
+}
+
+input:hover {
+  cursor: pointer;
+  background-color: rgb(51, 59, 59);
+  color: aliceblue;
+  background-size: cover;
+}
+
+.screen {
+  height: 50px;
+  width: 339px;
+  background-color: transparent;
+  color: rgb(14, 13, 13);
+  font-size: 40px;
+  text-align: left;
+  margin-top: 20px;
+  border: 1px solid rgb(19, 18, 18);
+}
+
+.clear {
+  grid-column: 1 / 4 !important;
+  width: 260px;
 }
